--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,37 +1,38 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+// * {
+//     box-sizing: border-box;
+//     margin: 0;
+//     padding: 0;
+// }
 
 
-body {
-    overflow-x: hidden;
-}
+// body {
+//     overflow-x: hidden;
+// }
 
-html,
-body {
+// html,
+// body {
     
-    height: 100%;
+//     height: 100%;
 
 
-    & .app {
-        padding: 0;
-        display: flex;
-        min-height: 100%;
-        flex-direction: column;
-        justify-content: space-between;
+//     & .app {
+//         padding: 0;
+//         display: flex;
+//         min-height: 100%;
+//         flex-direction: column;
+//         justify-content: space-between;
 
-        & .main {
-            flex-grow: 1;
-        }
+//         & .main {
+//             flex-grow: 1;
+//         }
 
 
-        & .content {
-            max-width: 1020px;
-            margin: 0 auto;
-            padding: 0 10px;
+//         & .content {
+//             max-width: 1020px;
+//             margin: 0 auto;
+//             padding: 0 10px;
 
-        }
-    }
-}
+//         }
+//     }
+// }
+
